--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,10 @@
     <string name="dial_number">PANGGIL TELEPON</string>
     <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
     <string name="result_from_activity">HASIL DARI AKTIVITI</string>
-    <string name="choose_color_">PILIH WARNA YANG KAMU SUKA</string>
-    <string name="_blue">BIRU</string>
-    <string name="_yellow">KUNING</string>
-    <string name="_red">MERAH</string>
+    <string name="choose_place">PILIH WISATA YANG KAMU SUKA</string>
+    <string name="_opsi1">JATIM PARK 3</string>
+    <string name="_opsi2">BATU NIGHT SPECTACULAR</string>
+    <string name="_opsi3">HUTAN PINUS</string>
     <string name="choose">PILIH</string>
     <string name="data_received">DATA DITERIMA</string>
     <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>
